# snyk-artifactory-patchflow

./: .gitignore  LICENSE  README.md  USERS_README.md  config.example.yml  defaults.yml  pyproject.toml  sample_snyk_report.json
src/dep_patchflow/: __init__.py  api.py  artifactory.py  config.py  main.py  models.py  patchwork_runner.py  planner.py  reporting.py  snyk_parser.py  version_policy.py
tests/: __init__.py  test_snyk_parser.py  test_version_policy.py
